# sandbox

./: .gitignore  README.md  bezier.py  coreutils.7z  cv_danilo.7z  matlab_subm.7z  matlab_trimming.7z  t2_7_aa  t2_7_ab  t2_7_ac  z_sensibilidade.ipynb
AI/ai_helloworld/: HelloWorld.ipynb
Apps/git-graph/: Makefile
Axini/AxiniAdapter/: .gitignore
C/c_lll_stack_grow/: Makefile
CMake/cmake_gpt_hello/: CMakeLists.txt  Makefile  main.cpp
CMake/cmake_hello/: CMakeLists.txt
ChromeExtensions/axini/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
ChromeExtensions/chrome-extension-boilerplate/: package.json  webpack.config.js
ChromeExtensions/ts-tailwind/: package-lock.json  package.json  postcss.config.js  webpack.config.js
ChromeExtensions/web-extension-ts-starter/: package-lock.json  package.json
ContaZe/dvieira/: .gitignore  package.json
ContaZe/new-conta-ze/: package-lock.json  package.json  tailwind.config.js
Cpp/cpp_20_hello/: Makefile
Cpp/cpp_20_modules/: Makefile  main.cpp  maths.cpp  maths.pcm  split.pcm
Cpp/cpp_algorithm/: CMakeLists.txt  Makefile  README.md
Cpp/cpp_cmake/: CMakeLists.txt  CMakeLists_.txt  Makefile  Makefile_  Readme.md
Cpp/cpp_cmake_marcus/tutorial/: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh
Cpp/cpp_cmake_marcus/tutorial/lib/: sum.cc
Cpp/cpp_cmake_marcus/tutorial/src/: main.cc
Cpp/cpp_conta_do_boi/: .gitignore  Makefile
Cpp/cpp_expected/: .clangd  CMakeLists.txt  Makefile
Cpp/cpp_float/: Makefile  main
Cpp/cpp_in_docker/: README.md
Cpp/cpp_qpoases/: CMakeLists.txt  Makefile
Cpp/cpp_quadprog/: Makefile  README.md  main  myProgram
Cpp/cpp_raii_with_lambdas/: Makefile
Cpp/cpp_smartpointer/: Makefile  main
Cpp/cpp_test/: main
Cpp/cpp_transform/: CMakeLists.txt  Makefile
Cpp/cpp_trinam/: Makefile  README.md
Cpp/cpp_unique_ptr/: Makefile
Cpp/cpp_unittest/: CMakeLists.txt  Makefile  README.md
Cpp/cpp_unittest/.github/workflows/: main.yml
Cpp/cpp_unittest/src/: main.cpp
Cpp/cpp_vector_reserve/: Makefile  tags
Cpp/cpp_wrappers/: Makefile  rectangle.h  wrapper  wrapper.cpp
Csharp/: README.md
Csharp/DinamicNodes/: Program.cs
Csharp/Hello/: Program.cs
DesignPattern/Python/: main.py
Go/go_gmail/: Makefile  credentials.json  (+3 more)
Jupyter/: codeGenerator.ipynb
Python/py_cpp/: CMakeLists.txt  Makefile  extension.cpp  test_extension.py
Python/py_cpp/py_cpp/: Makefile  mod_test.py
Python/py_cpp/py_cpp/src/: py.cpp
Python/py_cpp/py_cpp_ext/: Makefile  hello.pyd  main.cpp  pergunta_stack.txt  test_mod.py
Python/py_cpp/py_cpp_ext/src/: hello.cpp  utils.cpp  utils.h
RFA/: .gitignore
Rust/rs_cpp_extend/: Cargo.toml  Makefile  build.rs
Rust/rs_cpp_extend/src/: cpp_code.cpp  lib.rs  main.rs
SharedMem/: Makefile
WebSocket/: Makefile  client.py  index.html  package.json  server.js
cpp_maps/: main.cpp
lua/: Makefile  hello.lua
makefile/: Makefile  README.md
py_cpp_ext/: Makefile  Makefile_linux  README.md  test_mod.py
terminal/: Makefile  generate.py  temperature.txt
(+1162 files in other folders)
