[package]
name = "rs_cpp_extend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "app"
path = "src/main.r"

[lib]
crate-type = ["cdylib"]